# PrecisionMesh

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.appimage  meson.build
data/: precision_mesh.desktop
include/precision_mesh/: mesh_util.h  ply.h  step_util.h  stl.h
src/: precision_mesh.cpp
subprojects/: cgal.wrap  cli11.wrap  occt.wrap  tinyply.wrap
subprojects/packagecache/: tinyply-2.3.4.patch.tar.xz
subprojects/packagefiles/cgal/Installation/: CMakeLists.txt
